url logo uplode

--- a/index.html
+++ b/index.html
@@ -1,28 +1,25 @@
 <!-- CODE PAN PROJECT LINK -->
 <!-- https://codepen.io/tariqul420/pen/oNRKeyK?editors=1010 -->
 
-
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="images/text-to-speech.webp" type="image/x-icon">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="images/text-to-voice.png" type="image/x-icon" />
     <title>❤️TEXT TO VOICE CONVERTER❤️</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <div class="hero">
-        <h1>Text to Speech <span>Coverter</span></h1>
-        <textarea  placeholder="Write Anything Ex: My name is ❤️❤️❤️🤍🤍🤍"></textarea>
-        <div class="row">
-            <select></select>
-            <button><img src="images/play.png" alt="">Listen</button>
-        </div>
+      <h1>Text to Speech <span>Coverter</span></h1>
+      <textarea placeholder="Write Anything Ex: My name is ❤️❤️❤️🤍🤍🤍"></textarea>
+      <div class="row">
+        <select></select>
+        <button><img src="images/play.png" alt="" />Listen</button>
+      </div>
     </div>
 
-    <script
-    src="script.js"></script>
-</body>
+    <script src="script.js"></script>
+  </body>
 </html>
